force-app/main/default/objects/Zone__c/fields/Zone_Leader__c.field-meta.xml
<CustomField>
    <fullName>Zone_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zones</relationshipName>
    <type>Lookup</type>
</CustomField>