force-app/main/default/objects/Zone__c/fields/Zone_name__c.field-meta.xml
<CustomField>
    <fullName>Zone_name__c</fullName>
    <label>Zone name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>